# Ares-Rewrite

./: CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Manager/Event/: Dispatcher.h  Event.h  Types.h
Client/Manager/Hook/: Hook.h
Client/Manager/Hook/Hooks/: CMakeLists.txt
Client/Manager/Hook/Hooks/Actor/: CMakeLists.txt  Tick.cpp  Tick.h
Client/Manager/Hook/Hooks/GameMode/: CMakeLists.txt  GmTick_Hook.cpp  GmTick_Hook.h
Client/Manager/Hook/Hooks/Input/: CMakeLists.txt
Client/Manager/Hook/Hooks/Key/: CMakeLists.txt  KeyInput_Hook.cpp  KeyInput_Hook.h
Client/Manager/Hook/Hooks/Level/: CMakeLists.txt  Level_Hook.cpp  Level_Hook.h  Tick.cpp  Tick.h
Client/Manager/Hook/Hooks/LookInput/: CMakeLists.txt  LookInp_Hook.cpp  (+1 more)
Client/Manager/Lua/: CMakeLists.txt  LuaBindings.cpp  LuaBindings.h  LuaScripting.cpp  LuaScripting.h
Client/Manager/Modules/: CMakeLists.txt  Category.cpp  Category.h
Client/Manager/Modules/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Manager/Notification/: Manager.cpp  Manager.h
Client/Result/: Result.h
Client/Socket/: CMakeLists.txt  Socket.cpp  Socket.h
Client/Version/: CMakeLists.txt  Version.cpp  Version.h
Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Mem/AABB/: AABB.h
Mem/EnTT/: EnTT.h
Mem/Macro/: Class.h
Mem/MapRef/: MapRef.h
Mem/Math/: Random.h  Vector.h
Mem/Signature/: CMakeLists.txt  Signature.cpp  Signature.h
Mem/Vector/: Vec.h
SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
SDK/Classes/: CMakeLists.txt  ClientInstance.cpp  ClientInstance.h  GameMode.h
SDK/Classes/Entity/: Actor.cpp  Actor.h  CMakeLists.txt  EntityContext.h  Player.cpp  Player.h
SDK/Classes/Entity/Component/: Component.h  Components.h  Flags.h
SDK/Classes/Entity/Dimension/: Dimension.h
SDK/Classes/Entity/GameMode/: GameMode.h  GameType.h
SDK/Classes/Entity/Inventory/: PlayerInventory.h
SDK/Classes/Entity/Level/: CMakeLists.txt  Level.cpp  Level.h
SDK/Classes/GuiData/: GuiData.h
SDK/Classes/Input/: ClientInputHandler.h  ClientInputMappingFactory.h  KeyboardMouseSettings.h
SDK/Classes/Level/: Level.h
SDK/Classes/LoopbackPacketSender/: LoopbackPacketSender.h
SDK/Classes/LoopbackPacketSender/Packet/: Packet.h
SDK/Classes/Minecraft/: Minecraft.h
SDK/Classes/Minecraft/Timer/: Timer.h
SDK/Classes/MinecraftGame/: MinecraftGame.h
SDK/Classes/ScreenController/: CMakeLists.txt  ScreenController.cpp  ScreenController.h
Utils/: CMakeLists.txt  Utils.h
Utils/Debug/: Debugger.cpp  Debugger.h
Utils/Debugger/: CMakeLists.txt  Debugger.cpp  Debugger.h
Utils/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h
Utils/Render/ImFx/: CMakeLists.txt  ImFx.cpp  ImFx.h
Utils/Render/ImGui/: CMakeLists.txt
(+68 files in other folders)
